--- a/index.html
+++ b/index.html
@@ -1,63 +1,70 @@
 <!DOCTYPE html>
 <html lang="fr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Projet Personnel</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Projet Personnel</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="js/jQuery.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+  </head>
 
-  <link rel="stylesheet" href="style.css" />
-  <script src="js/jQuery.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-</head>
-
-<body>
-  <header>
-    <div class="inside">
-      <div class="flex">
-        <div class="logo">
-          <img class="logo-img" src="img/logo-gc.png" alt="" srcset="" />
+  <body>
+    <header>
+      <div class="inside">
+        <div class="flex">
+          <div class="logo">
+            <img class="logo-img" src="img/logo-gc.png" alt="" srcset="" />
+          </div>
+          <ul class="headerlist">
+            <li class="headerlist-content">
+              <a href="index.html"> Accueil </a>
+            </li>
+            <li class="headerlist-content">Nos derniers tests</li>
+            <li class="headerlist-content">Jeux</li>
+          </ul>
         </div>
-        <ul class="headerlist">
-          <li class="headerlist-content">
-            <a href="index.html">
-              Accueil
+      </div>
+    </header>
+    <div class="page">
+      <div class="gotm-bg">
+        <div class="inside">
+          <div class="content">
+            <a class="content1">
+              <img class="inside-img" src="img/fortnite.jpg" alt="" srcset="" />
             </a>
-          </li>
-          <li class="headerlist-content">Nos derniers tests</li>
-          <li class="headerlist-content">Jeux</li>
-        </ul>
+            <a class="content2" href="pages/game-page.html">
+              <img
+                class="inside-img"
+                src="img/hogwards-legacy.jpg"
+                alt=""
+                srcset=""
+              />
+            </a>
+            <a class="content3">
+              <img class="inside-img" src="img/gow.jpg" alt="" srcset="" />
+            </a>
+            <a class="content4">
+              <img class="inside-img" src="img/tlou.jpg" alt="" srcset="" />
+            </a>
+            <a class="content5">
+              <img class="inside-img" src="img/call.jpg" alt="" srcset="" />
+            </a>
+          </div>
+        </div>
       </div>
-    </div>
-  </header>
-  <div class="page">
-    <div class="space"></div>
-    <div class="inside">
+      <div class="space"></div>
       <div class="content">
-        <a class="content1">
-          <img class="inside-img" src="img/fortnite.jpg" alt="" srcset="" />
-        </a>
-        <a class="content2" href="pages/game-page.html">
-          <img class="inside-img" src="img/hogwards-legacy.jpg" alt="" srcset="" />
-        </a>
-        <a class="content3">
-          <img class="inside-img" src="img/gow.jpg" alt="" srcset="" />
-        </a>
-        <a class="content4">
-          <img class="inside-img" src="img/tlou.jpg" alt="" srcset="" />
-        </a>
-        <a class="content5">
-          <img class="inside-img" src="img/call.jpg" alt="" srcset="" />
-        </a>
+        <div class="inside">
+          <h2 class="game-title">LES JEUX DE LA SEMAINE</h2>
+        </div>
       </div>
+      <div class="space"></div>
     </div>
-    <div class="space"></div>
-    <div class="space"></div>
-  </div>
-  <footer></footer>
-</body>
+    <footer></footer>
+  </body>
 
-<script src="js/script.js"></script>
-
+  <script src="js/script.js"></script>
 </html>
