Prototype de la page de la liste des jeux n°01

--- a/pages/game-page.html
+++ b/pages/game-page.html
@@ -32,7 +32,11 @@
                         </a>
                     </li>
                     <li class="headerlist-content">Nos derniers tests</li>
-                    <li class="headerlist-content">Jeux</li>
+                    <li class="headerlist-content">
+                        <a href="../pages/game-list.html">
+                            Jeux
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
