--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
             </a>
           </li>
           <li class="headerlist-content">Nos derniers tests</li>
-          <li class="headerlist-content">Jeux</li>
+          <li class="headerlist-content">
+            <a href="pages/game-list.html">
+              Jeux
+            </a>
+          </li>
         </ul>
       </div>
     </div>
