--- a/pages/game-page.html
+++ b/pages/game-page.html
@@ -23,14 +23,16 @@
       <div class="inside">
         <div class="flex">
           <div class="logo">
-            <img class="logo-img" src="../img/logo-gc.png" alt="" srcset="" />
+            <img class="logo-img" src="img/logo-gc.png" alt="" srcset="" />
           </div>
           <ul class="headerlist">
             <li class="headerlist-content">
               <a href="../index.html"> Accueil </a>
             </li>
             <li class="headerlist-content">Nos derniers tests</li>
-            <li class="headerlist-content">Jeux</li>
+            <li class="headerlist-content">
+              <a href="game-list.html"> Jeux </a>
+            </li>
           </ul>
         </div>
       </div>
