Ajout du footer

--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
             </li>
             <li class="headerlist-content">Nos derniers tests</li>
             <li class="headerlist-content">
-              <a href="pages/game-list.html">
-                Jeux
-              </a>
+              <a href="pages/game-list.html"> Jeux </a>
             </li>
           </ul>
         </div>
@@ -67,7 +65,37 @@
       </div>
       <div class="space"></div>
     </div>
-    <footer></footer>
+    <footer>
+      <div class="inside">
+        <div class="footer-collumns-container">
+          <div class="footer-collumn">
+            <p>Mentions légales</p>
+          </div>
+          <div class="footer-collumn">
+            <p>Nous contacter</p>
+          </div>
+          <div class="footer-collumn">
+            <div class="socials">
+              <img
+                src="./img/logo-reseaux/Instagram_simple_icon.svg"
+                alt=""
+                srcset=""
+                class="social-icon"
+              />
+              <img
+                src="./img/logo-reseaux/Facebook_F_icon.svg"
+                alt=""
+                srcset=""
+                class="social-icon"
+              />
+            </div>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <p class="very-small-text">Copyrights @SparqueeZ & @Zyklion</p>
+        </div>
+      </div>
+    </footer>
   </body>
 
   <script src="js/script.js"></script>
