--- a/index.html
+++ b/index.html
@@ -31,36 +31,110 @@
       </div>
     </header>
     <div class="page">
-      <div class="gotm-bg">
-        <div class="inside">
-          <div class="content">
-            <a class="content1">
-              <img class="inside-img" src="img/fortnite.jpg" alt="" srcset="" />
-            </a>
-            <a class="content2" href="pages/game-page.html">
-              <img
-                class="inside-img"
-                src="img/hogwards-legacy.jpg"
-                alt=""
-                srcset=""
-              />
-            </a>
-            <a class="content3">
-              <img class="inside-img" src="img/gow.jpg" alt="" srcset="" />
-            </a>
-            <a class="content4">
-              <img class="inside-img" src="img/tlou.jpg" alt="" srcset="" />
-            </a>
-            <a class="content5">
-              <img class="inside-img" src="img/call.jpg" alt="" srcset="" />
-            </a>
+      <div class="gotm-bg"></div>
+
+      <div class="slider-container">
+        <div class="game-slider">
+          <div class="inside">
+            <div class="content">
+              <a class="content1">
+                <img
+                  class="inside-img"
+                  src="img/fortnite.jpg"
+                  alt=""
+                  srcset=""
+                />
+              </a>
+              <a class="content2" href="pages/game-page.html">
+                <img
+                  class="inside-img"
+                  src="img/hogwards-legacy.jpg"
+                  alt=""
+                  srcset=""
+                />
+              </a>
+              <a class="content3">
+                <img class="inside-img" src="img/gow.jpg" alt="" srcset="" />
+              </a>
+              <a class="content4">
+                <img class="inside-img" src="img/tlou.jpg" alt="" srcset="" />
+              </a>
+              <a class="content5">
+                <img class="inside-img" src="img/call.jpg" alt="" srcset="" />
+              </a>
+            </div>
           </div>
         </div>
       </div>
       <div class="space"></div>
-      <div class="content">
-        <div class="inside">
-          <h2 class="game-title">LES JEUX DE LA SEMAINE</h2>
+      <div class="space"></div>
+      <div class="inside">
+        <h2 class="card-section-title">LES JEUX DE LA SEMAINE</h2>
+        <div class="space"></div>
+        <div class="card-container">
+          <div class="card">
+            <img
+              class="card-img"
+              src="img/hogwards-legacy.jpg"
+              alt=""
+              srcset=""
+            />
+          </div>
+
+          <div class="card">
+            <img
+              class="card-img"
+              src="img/hogwards-legacy.jpg"
+              alt=""
+              srcset=""
+            />
+          </div>
+
+          <div class="card">
+            <img
+              class="card-img"
+              src="img/hogwards-legacy.jpg"
+              alt=""
+              srcset=""
+            />
+          </div>
+
+          <div class="card">
+            <img
+              class="card-img"
+              src="img/hogwards-legacy.jpg"
+              alt=""
+              srcset=""
+            />
+          </div>
+
+          <div class="card">
+            <img
+              class="card-img"
+              src="img/hogwards-legacy.jpg"
+              alt=""
+              srcset=""
+            />
+          </div>
+
+          <div class="card">
+            <img
+              class="card-img"
+              src="img/hogwards-legacy.jpg"
+              alt=""
+              srcset=""
+            />
+          </div>
+        </div>
+      </div>
+      <div class="space"></div>
+
+      <div class="inside">
+        <div class="card-containerv2">
+          <div class="cardv2">
+            <img class="cardv2img" src="" alt="" />
+            <div class="cardv2desc"></div>
+          </div>
         </div>
       </div>
       <div class="space"></div>
