Ajout d'une deuxieme version des cartes de présentations des jeux de la semaine

--- a/index.html
+++ b/index.html
@@ -1,176 +1,152 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projet Personnel</title>
 
-    <link rel="stylesheet" href="style.css" />
-    <script src="js/jQuery.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Projet Personnel</title>
 
-  <body>
-    <header>
-      <div class="inside">
-        <div class="flex">
-          <div class="logo">
-            <img class="logo-img" src="img/logo-gc.png" alt="" srcset="" />
-          </div>
-          <ul class="headerlist">
-            <li class="headerlist-content">
-              <a href="index.html"> Accueil </a>
-            </li>
-            <li class="headerlist-content">Nos derniers tests</li>
-            <li class="headerlist-content">
-              <a href="pages/game-list.html"> Jeux </a>
-            </li>
-          </ul>
+  <link rel="stylesheet" href="style.css" />
+  <script src="js/jQuery.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+</head>
+
+<body>
+  <header>
+    <div class="inside">
+      <div class="flex">
+        <div class="logo">
+          <img class="logo-img" src="img/logo-gc.png" alt="" srcset="" />
         </div>
+        <ul class="headerlist">
+          <li class="headerlist-content">
+            <a href="index.html"> Accueil </a>
+          </li>
+          <li class="headerlist-content">Nos derniers tests</li>
+          <li class="headerlist-content">
+            <a href="pages/game-list.html"> Jeux </a>
+          </li>
+        </ul>
       </div>
-    </header>
-    <div class="page">
-      <div class="gotm-bg"></div>
-
-      <div class="slider-container">
-        <div class="game-slider">
-          <div class="inside">
-            <div class="content">
-              <a class="content1">
-                <img
-                  class="inside-img"
-                  src="img/fortnite.jpg"
-                  alt=""
-                  srcset=""
-                />
-              </a>
-              <a class="content2" href="pages/game-page.html">
-                <img
-                  class="inside-img"
-                  src="img/hogwards-legacy.jpg"
-                  alt=""
-                  srcset=""
-                />
-              </a>
-              <a class="content3">
-                <img class="inside-img" src="img/gow.jpg" alt="" srcset="" />
-              </a>
-              <a class="content4">
-                <img class="inside-img" src="img/tlou.jpg" alt="" srcset="" />
-              </a>
-              <a class="content5">
-                <img class="inside-img" src="img/call.jpg" alt="" srcset="" />
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="space"></div>
-      <div class="space"></div>
-      <div class="inside">
-        <h2 class="card-section-title">LES JEUX DE LA SEMAINE</h2>
-        <div class="space"></div>
-        <div class="card-container">
-          <div class="card">
-            <img
-              class="card-img"
-              src="img/hogwards-legacy.jpg"
-              alt=""
-              srcset=""
-            />
-          </div>
-
-          <div class="card">
-            <img
-              class="card-img"
-              src="img/hogwards-legacy.jpg"
-              alt=""
-              srcset=""
-            />
-          </div>
-
-          <div class="card">
-            <img
-              class="card-img"
-              src="img/hogwards-legacy.jpg"
-              alt=""
-              srcset=""
-            />
-          </div>
-
-          <div class="card">
-            <img
-              class="card-img"
-              src="img/hogwards-legacy.jpg"
-              alt=""
-              srcset=""
-            />
-          </div>
-
-          <div class="card">
-            <img
-              class="card-img"
-              src="img/hogwards-legacy.jpg"
-              alt=""
-              srcset=""
-            />
-          </div>
-
-          <div class="card">
-            <img
-              class="card-img"
-              src="img/hogwards-legacy.jpg"
-              alt=""
-              srcset=""
-            />
-          </div>
-        </div>
-      </div>
-      <div class="space"></div>
-
-      <div class="inside">
-        <div class="card-containerv2">
-          <div class="cardv2">
-            <img class="cardv2img" src="" alt="" />
-            <div class="cardv2desc"></div>
-          </div>
-        </div>
-      </div>
-      <div class="space"></div>
     </div>
-    <footer>
-      <div class="inside">
-        <div class="footer-collumns-container">
-          <div class="footer-collumn">
-            <p>Mentions légales</p>
+  </header>
+  <div class="page">
+    <div class="gotm-bg"></div>
+
+    <div class="slider-container">
+      <div class="game-slider">
+        <div class="inside">
+          <div class="content">
+            <a class="content1">
+              <img class="inside-img" src="img/fortnite.jpg" alt="" srcset="" />
+            </a>
+            <a class="content2" href="pages/game-page.html">
+              <img class="inside-img" src="img/hogwards-legacy.jpg" alt="" srcset="" />
+            </a>
+            <a class="content3">
+              <img class="inside-img" src="img/gow.jpg" alt="" srcset="" />
+            </a>
+            <a class="content4">
+              <img class="inside-img" src="img/tlou.jpg" alt="" srcset="" />
+            </a>
+            <a class="content5">
+              <img class="inside-img" src="img/call.jpg" alt="" srcset="" />
+            </a>
           </div>
-          <div class="footer-collumn">
-            <p>Nous contacter</p>
-          </div>
-          <div class="footer-collumn">
-            <div class="socials">
-              <img
-                src="./img/logo-reseaux/Instagram_simple_icon.svg"
-                alt=""
-                srcset=""
-                class="social-icon"
-              />
-              <img
-                src="./img/logo-reseaux/Facebook_F_icon.svg"
-                alt=""
-                srcset=""
-                class="social-icon"
-              />
-            </div>
-          </div>
-        </div>
-        <div class="footer-bottom">
-          <p class="very-small-text">Copyrights @SparqueeZ & @Zyklion</p>
         </div>
       </div>
-    </footer>
-  </body>
+    </div>
+    <div class="space"></div>
+    <div class="space"></div>
+    <div class="inside">
+      <h2 class="card-section-title">LES JEUX DE LA SEMAINE</h2>
+      <div class="space"></div>
+      <div class="card-container">
+        <div class="card">
+          <img class="card-img" src="img/hogwards-legacy.jpg" alt="" srcset="" />
+        </div>
 
-  <script src="js/script.js"></script>
+        <div class="card">
+          <img class="card-img" src="img/hogwards-legacy.jpg" alt="" srcset="" />
+        </div>
+
+        <div class="card">
+          <img class="card-img" src="img/hogwards-legacy.jpg" alt="" srcset="" />
+        </div>
+
+        <div class="card">
+          <img class="card-img" src="img/hogwards-legacy.jpg" alt="" srcset="" />
+        </div>
+
+        <div class="card">
+          <img class="card-img" src="img/hogwards-legacy.jpg" alt="" srcset="" />
+        </div>
+
+        <div class="card">
+          <img class="card-img" src="img/hogwards-legacy.jpg" alt="" srcset="" />
+        </div>
+      </div>
+    </div>
+    <div class="space"></div>
+
+    <div class="inside">
+      <div class="card-containerv2">
+        <div class="cardv2">
+          <img class="cardv2img" src="img/hogwards-legacy.jpg" alt="" />
+          <div class="cardv2desc">
+            <p class="cardv2name">Hogwarts Legacy</p>
+            <p class="cardv2phrase">Venez découvrir l'univers de Harry Potter directement a portée de bras</p>
+          </div>
+          <div class="cardv2rank"></div>
+        </div>
+        <div class="cardv2">
+          <img class="cardv2img" src="img/call.jpg" alt="" />
+          <div class="cardv2desc"></div>
+          <div class="cardv2rank"></div>
+        </div>
+        <div class="cardv2">
+          <img class="cardv2img" src="img/fortnite.jpg" alt="" />
+          <div class="cardv2desc"></div>
+          <div class="cardv2rank"></div>
+        </div>
+        <div class="cardv2">
+          <img class="cardv2img" src="img/tlou.jpg" alt="" />
+          <div class="cardv2desc"></div>
+          <div class="cardv2rank"></div>
+        </div>
+        <div class="cardv2">
+          <img class="cardv2img" src="img/gow.jpg" alt="" />
+          <div class="cardv2desc"></div>
+          <div class="cardv2rank"></div>
+        </div>
+      </div>
+    </div>
+    <div class="space"></div>
+  </div>
+  <footer>
+    <div class="inside">
+      <div class="footer-collumns-container">
+        <div class="footer-collumn">
+          <p>Mentions légales</p>
+        </div>
+        <div class="footer-collumn">
+          <p>Nous contacter</p>
+        </div>
+        <div class="footer-collumn">
+          <div class="socials">
+            <img src="./img/logo-reseaux/Instagram_simple_icon.svg" alt="" srcset="" class="social-icon" />
+            <img src="./img/logo-reseaux/Facebook_F_icon.svg" alt="" srcset="" class="social-icon" />
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p class="very-small-text">Copyrights @SparqueeZ & @Zyklion</p>
+      </div>
+    </div>
+  </footer>
+</body>
+
+<script src="js/script.js"></script>
+
 </html>
