Update 2 : diplay flex

--- a/pages/game-list.html
+++ b/pages/game-list.html
@@ -42,39 +42,49 @@
         </div>
     </header>
     <div class="inside">
-        <div class="list-game">
-            <div class="case1">
+        <div class="separation">
+            <div class="search">
+            </div>
+            <div class="list-game">
                 <div class="project-item">
                     <a href="../pages/game-page.html">
                         <img class="game-img-list" src="../img/hogwards-legacy.jpg" alt="" srcset=""/>
                             <div class="overlay">
-                                <p><strong>HOGWARTS<br>LEGACY</strong></p>
+                                <p>HOGWARTS LEGACY</p>
                             </div>
                     </a>
                 </div>
-            </div>
-            <div class="case2">
                 <div class="project-item">
-                    <img class="game-img-list" src="../img/fortnite.jpg" alt="" srcset="" />
-                        <div class="overlay">
-                            <p><strong><br>FORTNITE</strong></p>
-                        </div>
+                    <a href="../pages/game-page.html">
+                        <img class="game-img-list" src="../img/fortnite.jpg" alt="" srcset="" />
+                            <div class="overlay">
+                                <p>FORTNITE</p>
+                            </div>
+                    </a>
                 </div>
-            </div>
-            <div class="case3">
                 <div class="project-item">
-                    <img class="game-img-list" src="../img/tlou.jpg" alt="" srcset="" />
-                        <div class="overlay">
-                            <p><strong>THE LAST<br>OF US</strong></p>
-                        </div>
+                    <a href="../pages/game-page.html">
+                        <img class="game-img-list" src="../img/tlou.jpg" alt="" srcset="" />
+                            <div class="overlay">
+                                <p>THE LAST OF US</p>
+                            </div>
+                    </a>    
                 </div>
-            </div>
-            <div class="case4">
                 <div class="project-item">
-                    <img class="game-img-list" src="../img/gow.jpg" alt="" srcset="" />
-                        <div class="overlay">
-                            <p><strong>GOD OF<br>WAR</strong></p>
-                        </div>
+                    <a href="../pages/game-page.html">
+                        <img class="game-img-list" src="../img/gow.jpg" alt="" srcset="" />
+                            <div class="overlay">
+                                <p>GOD OF WAR</p>
+                            </div>
+                    </a>    
+                </div>
+                <div class="project-item">
+                    <a href="../pages/game-page.html">
+                        <img class="game-img-list" src="../img/minecraft.jpg" alt="" srcset="" />
+                            <div class="overlay">
+                                <p>MINECRAFT</p>
+                            </div>
+                    </a>
                 </div>
             </div>
         </div>
