Correction : Ajout des places pour les icones et la progress bar des cartes de jeux de la semaine

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
           <li class="headerlist-content">
             <a href="index.html"> Accueil </a>
           </li>
-          <li class="headerlist-content">Nos derniers tests</li>
+          <li class="headerlist-content">
+            <a href="pages/..."> Nos derniers tests </a>
+          </li>
           <li class="headerlist-content">
             <a href="pages/game-list.html"> Jeux </a>
           </li>
@@ -59,16 +61,17 @@
     </div>
     <div class="space"></div>
     <div class="space"></div>
+    <div class="space"></div>
     <div class="inside">
       <h2 class="card-section-title">LES JEUX DE LA SEMAINE</h2>
       <div class="space"></div>
-      <div class="card-container">
+      <!-- <div class="card-container">
         <div class="card">
           <img class="card-img" src="img/hogwards-legacy.jpg" alt="" srcset="" />
         </div>
 
         <div class="card">
-          <img class="card-img" src="img/hogwards-legacy.jpg" alt="" srcset="" />
+          <img class="card-img" src="img/tlou.jpg" alt="" srcset="" />
         </div>
 
         <div class="card">
@@ -88,63 +91,84 @@
         </div>
       </div>
     </div>
-    <div class="space"></div>
+    <div class="space"></div> -->
 
-    <div class="inside">
-      <div class="card-containerv2">
-        <div class="cardv2">
-          <img class="cardv2img" src="img/hogwards-legacy.jpg" alt="" />
-          <div class="cardv2desc">
-            <p class="cardv2name">Hogwarts Legacy</p>
-            <p class="cardv2phrase">Venez découvrir l'univers de Harry Potter directement a portée de bras</p>
+      <div class="inside">
+        <div class="card-containerv2">
+          <div class="cardv2">
+            <img class="cardv2img" src="img/hogwards-legacy.jpg" alt="" />
+            <div class="cardv2desc">
+              <p class="cardv2name">Hogwarts Legacy</p>
+              <p class="cardv2phrase">Venez découvrir l'univers de Harry Potter directement a portée de bras</p>
+              <span class="cardV2RatingContainer">
+                <span class="cardV2RatingSection">
+                  <span class="cardV2RatingIcon"></span>
+                  <span class="cardV2RatingProgressBar"></span>
+                </span>
+                <span class="cardV2RatingSection">
+                  <span class="cardV2RatingIcon"></span>
+                  <span class="cardV2RatingProgressBar"></span>
+                </span>
+                <span class="cardV2RatingSection">
+                  <span class="cardV2RatingIcon"></span>
+                  <span class="cardV2RatingProgressBar"></span>
+                </span>
+                <span class="cardV2RatingTabBtn"></span>
+              </span>
+            </div>
+            <div class="cardv2rank"></div>
           </div>
-          <div class="cardv2rank"></div>
-        </div>
-        <div class="cardv2">
-          <img class="cardv2img" src="img/call.jpg" alt="" />
-          <div class="cardv2desc"></div>
-          <div class="cardv2rank"></div>
-        </div>
-        <div class="cardv2">
-          <img class="cardv2img" src="img/fortnite.jpg" alt="" />
-          <div class="cardv2desc"></div>
-          <div class="cardv2rank"></div>
-        </div>
-        <div class="cardv2">
-          <img class="cardv2img" src="img/tlou.jpg" alt="" />
-          <div class="cardv2desc"></div>
-          <div class="cardv2rank"></div>
-        </div>
-        <div class="cardv2">
-          <img class="cardv2img" src="img/gow.jpg" alt="" />
-          <div class="cardv2desc"></div>
-          <div class="cardv2rank"></div>
-        </div>
-      </div>
-    </div>
-    <div class="space"></div>
-  </div>
-  <footer>
-    <div class="inside">
-      <div class="footer-collumns-container">
-        <div class="footer-collumn">
-          <p>Mentions légales</p>
-        </div>
-        <div class="footer-collumn">
-          <p>Nous contacter</p>
-        </div>
-        <div class="footer-collumn">
-          <div class="socials">
-            <img src="./img/logo-reseaux/Instagram_simple_icon.svg" alt="" srcset="" class="social-icon" />
-            <img src="./img/logo-reseaux/Facebook_F_icon.svg" alt="" srcset="" class="social-icon" />
+          <div class="cardv2">
+            <img class="cardv2img" src="img/call.jpg" alt="" />
+            <div class="cardv2desc"></div>
+            <div class="cardv2rank"></div>
+          </div>
+          <div class="cardv2">
+            <img class="cardv2img" src="img/fortnite.jpg" alt="" />
+            <div class="cardv2desc"></div>
+            <div class="cardv2rank"></div>
+          </div>
+          <div class="cardv2">
+            <img class="cardv2img" src="img/tlou.jpg" alt="" />
+            <div class="cardv2desc"></div>
+            <div class="cardv2rank"></div>
+          </div>
+          <div class="cardv2">
+            <img class="cardv2img" src="img/gow.jpg" alt="" />
+            <div class="cardv2desc"></div>
+            <div class="cardv2rank"></div>
           </div>
         </div>
       </div>
-      <div class="footer-bottom">
-        <p class="very-small-text">Copyrights @SparqueeZ & @Zyklion</p>
-      </div>
+      <div class="space"></div>
     </div>
-  </footer>
+    <footer>
+      <div class="inside">
+        <div class="footer-collumns-container">
+          <div class="footer-collumn">
+            <p>Mentions légales</p>
+          </div>
+          <div class="footer-collumn">
+            <p>Nous contacter</p>
+          </div>
+          <div class="footer-collumn">
+            <div class="socials">
+              <a
+                href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjX_POz6Lf9AhV3VqQEHTETCysQyCl6BAgYEAM&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DdQw4w9WgXcQ&usg=AOvVaw0aHtehaphMhOCAkCydRLZU">
+                <img src="./img/logo-reseaux/Instagram_simple_icon.svg" alt="" srcset="" class="social-icon" />
+              </a>
+              <a
+                href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjX_POz6Lf9AhV3VqQEHTETCysQyCl6BAgYEAM&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DdQw4w9WgXcQ&usg=AOvVaw0aHtehaphMhOCAkCydRLZU">
+                <img src="./img/logo-reseaux/Facebook_F_icon.svg" alt="" srcset="" class="social-icon" />
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <p class="very-small-text">Copyrights @SparqueeZ & @Zyklion</p>
+        </div>
+      </div>
+    </footer>
 </body>
 
 <script src="js/script.js"></script>
