Ajout de la fonctionnalité de carte déroulante sur la page d'accueil

--- a/index.html
+++ b/index.html
@@ -95,35 +95,55 @@
 
       <div class="inside">
         <div class="card-containerv2">
-          <div class="cardv2">
-
+          <div id="hog" class="cardv2">
             <img class="cardv2img" src="img/hogwards-legacy.jpg" alt="" />
-            <div class="cardv2desc">
-              <p class="cardv2name">Hogwarts Legacy</p>
-              <p class="cardv2phrase">Venez découvrir l'univers de Harry Potter directement a portée de bras</p>
-              <span class="cardV2RatingContainer">
-                <span class="cardV2RatingSection">
-                  <span class="cardV2RatingIcon"></span>
-                  <span class="cardV2RatingProgressBar"></span>
+              <div id="desc" class="cardv2desc">
+                <p class="cardv2name">Hogwarts Legacy</p>
+                <p class="cardv2phrase">Venez découvrir l'univers de Harry Potter directement a portée de bras</p>
+                <span class="cardV2RatingContainer">
+                  <span class="cardV2RatingSection">
+                    <span class="cardV2RatingIcon"></span>
+                    <span class="cardV2RatingProgressBar"></span>
+                  </span>
+                  <span class="cardV2RatingSection">
+                    <span class="cardV2RatingIcon"></span>
+                    <span class="cardV2RatingProgressBar"></span>
+                  </span>
+                  <span class="cardV2RatingSection">
+                    <span class="cardV2RatingIcon"></span>
+                    <span class="cardV2RatingProgressBar"></span>
+                  </span>
+                  <span class="cardV2RatingTabBtn" id="openCardV2"><a class="salutbtn" href=""></a></span>
                 </span>
-                <span class="cardV2RatingSection">
-                  <span class="cardV2RatingIcon"></span>
-                  <span class="cardV2RatingProgressBar"></span>
-                </span>
-                <span class="cardV2RatingSection">
-                  <span class="cardV2RatingIcon"></span>
-                  <span class="cardV2RatingProgressBar"></span>
-                </span>
-                <span class="cardV2RatingTabBtn"></span>
-              </span>
+              </div>
+              <div class="cardv2rank"></div>
             </div>
-            <div class="cardv2rank"></div>
-          </div>
-          <div class="cardv2">
-            <img class="cardv2img" src="img/call.jpg" alt="" />
-            <div class="cardv2desc"></div>
-            <div class="cardv2rank"></div>
-          </div>
+            
+          
+            <div id="cal" class="cardv2">
+              <img class="cardv2img" src="img/call.jpg" alt="" />
+                <div id="desc" class="cardv2desc">
+                  <p class="cardv2name">Hogwarts Legacy</p>
+                  <p class="cardv2phrase">Venez découvrir l'univers de Harry Potter directement a portée de bras</p>
+                  <span class="cardV2RatingContainer">
+                    <span class="cardV2RatingSection">
+                      <span class="cardV2RatingIcon"></span>
+                      <span class="cardV2RatingProgressBar"></span>
+                    </span>
+                    <span class="cardV2RatingSection">
+                      <span class="cardV2RatingIcon"></span>
+                      <span class="cardV2RatingProgressBar"></span>
+                    </span>
+                    <span class="cardV2RatingSection">
+                      <span class="cardV2RatingIcon"></span>
+                      <span class="cardV2RatingProgressBar"></span>
+                    </span>
+                    <span class="cardV2RatingTabBtn" id="openCardV2"><a class="salutbtn" href=""></a></span>
+                  </span>
+                </div>
+                <div class="cardv2rank"></div>
+              </div>
+
           <div class="cardv2">
             <img class="cardv2img" src="img/fortnite.jpg" alt="" />
             <div class="cardv2desc"></div>
@@ -141,7 +161,7 @@
           </div>
         </div>
       </div>
-      <div class="space"></div>
+      <div class="space"></div> 
     </div>
     <footer>
       <div class="inside">
@@ -163,7 +183,7 @@
                 <img src="./img/logo-reseaux/Facebook_F_icon.svg" alt="" srcset="" class="social-icon" />
               </a>
             </div>
-          </div>
+          </div>  
         </div>
         <div class="footer-bottom">
           <p class="very-small-text">Copyrights @SparqueeZ & @Zyklion</p>
@@ -172,6 +192,8 @@
     </footer>
 </body>
 
+<script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
 <script src="js/script.js"></script>
+<script src="js/js-excel.js"></script>
 
 </html>
