Ajout : Icones des cartes de jeux sur la page d'accueil. Correction : Cartes de jeux plus responsives et plus cleans, avec un fonctionnement maintenant sans glitch

--- a/index.html
+++ b/index.html
@@ -95,14 +95,61 @@
 
       <div class="inside">
         <div class="card-containerv2">
+
           <div id="hog" class="cardv2">
-            <img class="cardv2img" src="img/hogwards-legacy.jpg" alt="" />
-              <div id="desc" class="cardv2desc">
+            <div class="card-left">
+              <img class="cardv2img" src="img/hogwards-legacy.jpg" alt="" />
+              <span class="cardrating20">
+                <span class="cardrating20in">
+                  <p class="rating">13</p>
+                  <p class="rating">20</p></span>
+              </span>
+            </div>
+            <div class="card-right">
                 <p class="cardv2name">Hogwarts Legacy</p>
-                <p class="cardv2phrase">Venez découvrir l'univers de Harry Potter directement a portée de bras</p>
+                <p class="cardv2phrase">Venez découvrir l'univers de Harry Potter directement a portée de bras, vivez votre expérience 200 ans avant la fameuse saga des romans et des films. Retrouvez le lieu mythique de nos héros favoris ainsi que ses alentours.</p>
                 <span class="cardV2RatingContainer">
                   <span class="cardV2RatingSection">
-                    <span class="cardV2RatingIcon"></span>
+                    <span class="cardV2RatingIcon">
+                      <img src="img/icons/noun-gamepad-1608468.png" alt="">
+                    </span>
+                    <span class="cardV2RatingProgressBar"></span>
+                  </span>
+                  <span class="cardV2RatingSection">
+                    <span class="cardV2RatingIcon">
+                      <img src="img/icons/noun-wrench-1560053.png" alt=""></span>
+                    <span class="cardV2RatingProgressBar"></span>
+                  </span>
+                  <span class="cardV2RatingSection">
+                    <span class="cardV2RatingIcon">
+                      <img src="img/icons/noun-story-3266367.png" alt=""></span>
+                    <span class="cardV2RatingProgressBar"></span>
+                  </span>
+                  <span class="cardV2RatingTabBtn" id="openCardV2"><a class="salutbtn" href=""></a></span>
+                </span>
+                <span>
+                  <p>Test</p>
+                  <p>Test</p>
+                  <p>Test</p>
+                  <p>Test</p>
+                </span>
+            </div>
+            <div class="cardv2rank"></div>
+          </div>
+
+          <div id="hog" class="cardv2">
+            <div class="card-left">
+              <img class="cardv2img" src="img/tlou.jpg" alt="" />
+            </div>
+            <div class="card-right">
+              <div id="desc" class="cardv2desc">
+                <p class="cardv2name">The Last of Us</p>
+                <p class="cardv2phrase">Suivez Eli et Joël dans une quête de rédemption</p>
+                <span class="cardV2RatingContainer">
+                  <span class="cardV2RatingSection">
+                    <span class="cardV2RatingIcon">
+                      <img src="img/icons/noun-gamepad-1608468.png" alt="">
+                    </span>
                     <span class="cardV2RatingProgressBar"></span>
                   </span>
                   <span class="cardV2RatingSection">
@@ -115,53 +162,19 @@
                   </span>
                   <span class="cardV2RatingTabBtn" id="openCardV2"><a class="salutbtn" href=""></a></span>
                 </span>
+                <span>
+                  <p>Test</p>
+                  <p>Test</p>
+                  <p>Test</p>
+                  <p>Test</p>
+                </span>
               </div>
-              <div class="cardv2rank"></div>
             </div>
-            
-          
-            <div id="cal" class="cardv2">
-              <img class="cardv2img" src="img/call.jpg" alt="" />
-                <div id="desc" class="cardv2desc">
-                  <p class="cardv2name">Hogwarts Legacy</p>
-                  <p class="cardv2phrase">Venez découvrir l'univers de Harry Potter directement a portée de bras</p>
-                  <span class="cardV2RatingContainer">
-                    <span class="cardV2RatingSection">
-                      <span class="cardV2RatingIcon"></span>
-                      <span class="cardV2RatingProgressBar"></span>
-                    </span>
-                    <span class="cardV2RatingSection">
-                      <span class="cardV2RatingIcon"></span>
-                      <span class="cardV2RatingProgressBar"></span>
-                    </span>
-                    <span class="cardV2RatingSection">
-                      <span class="cardV2RatingIcon"></span>
-                      <span class="cardV2RatingProgressBar"></span>
-                    </span>
-                    <span class="cardV2RatingTabBtn" id="openCardV2"><a class="salutbtn" href=""></a></span>
-                  </span>
-                </div>
-                <div class="cardv2rank"></div>
-              </div>
-
-          <div class="cardv2">
-            <img class="cardv2img" src="img/fortnite.jpg" alt="" />
-            <div class="cardv2desc"></div>
-            <div class="cardv2rank"></div>
-          </div>
-          <div class="cardv2">
-            <img class="cardv2img" src="img/tlou.jpg" alt="" />
-            <div class="cardv2desc"></div>
-            <div class="cardv2rank"></div>
-          </div>
-          <div class="cardv2">
-            <img class="cardv2img" src="img/gow.jpg" alt="" />
-            <div class="cardv2desc"></div>
             <div class="cardv2rank"></div>
           </div>
         </div>
       </div>
-      <div class="space"></div> 
+      <div class="space"></div>
     </div>
     <footer>
       <div class="inside">
@@ -183,7 +196,7 @@
                 <img src="./img/logo-reseaux/Facebook_F_icon.svg" alt="" srcset="" class="social-icon" />
               </a>
             </div>
-          </div>  
+          </div>
         </div>
         <div class="footer-bottom">
           <p class="very-small-text">Copyrights @SparqueeZ & @Zyklion</p>
