--- a/pages/game-list.html
+++ b/pages/game-list.html
@@ -44,6 +44,46 @@
     <div class="inside">
         <div class="separation">
             <div class="search">
+                <div class="search-bar">
+                    <label for="site-search">Chercher un jeu :</label>
+                    <input type="search" id="site-search" name="">
+                    <button>Chercher</button>
+                </div>
+                <fieldset>
+                    <legend>Caractéristiques</legend>
+                    <div>
+                        <input type="checkbox" id="Multijoueur" name="Multijoueur" checked>
+                        <label for="Multijoueur">Multijoueur</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" id="MMORPG" name="MMORPG">
+                        <label for="MMORPG">MMORPG</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" id="Open World" name="Open World">
+                        <label for="Open World">Open World</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" id="Aventure" name="Aventure">
+                        <label for="Aventure">Aventure</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" id="Drole" name="Drole">
+                        <label for="Drole">Drole</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" id="Tour par tour" name="Tour par tour">
+                        <label for="Tour par tour">Tour par tour</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" id="Horreur" name="Horreur">
+                        <label for="Horreur">Horreur</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" id="Enfants" name="Enfants">
+                        <label for="Enfants">Enfants</label>
+                    </div>
+                </fieldset>
             </div>
             <div class="list-game">
                 <div class="project-item">
