--- a/index.html
+++ b/index.html
@@ -102,37 +102,46 @@
               <span class="cardrating20">
                 <span class="cardrating20in">
                   <p class="rating">13</p>
-                  <p class="rating">20</p></span>
+                  <p class="rating">20</p>
+                </span>
               </span>
             </div>
             <div class="card-right">
-                <p class="cardv2name">Hogwarts Legacy</p>
-                <p class="cardv2phrase">Venez découvrir l'univers de Harry Potter directement a portée de bras, vivez votre expérience 200 ans avant la fameuse saga des romans et des films. Retrouvez le lieu mythique de nos héros favoris ainsi que ses alentours.</p>
-                <span class="cardV2RatingContainer">
-                  <span class="cardV2RatingSection">
-                    <span class="cardV2RatingIcon">
-                      <img src="img/icons/noun-gamepad-1608468.png" alt="">
-                    </span>
-                    <span class="cardV2RatingProgressBar"></span>
+              <p class="cardv2name">Hogwarts Legacy</p>
+              <p class="cardv2phrase">Venez découvrir l'univers de Harry Potter directement a portée de bras, vivez
+                votre expérience 200 ans avant la fameuse saga des romans et des films. Retrouvez le lieu mythique de
+                nos héros favoris ainsi que ses alentours.</p>
+              <span class="cardV2RatingContainer">
+                <span class="cardV2RatingSection">
+                  <span class="cardV2RatingIcon">
+                    <img src="img/icons/noun-gamepad-1608468.png" alt="">
                   </span>
-                  <span class="cardV2RatingSection">
-                    <span class="cardV2RatingIcon">
-                      <img src="img/icons/noun-wrench-1560053.png" alt=""></span>
-                    <span class="cardV2RatingProgressBar"></span>
+                  <span class="cardV2RatingProgressBar">
+                    <span class="cardV2RatingBar"></span>
                   </span>
-                  <span class="cardV2RatingSection">
-                    <span class="cardV2RatingIcon">
-                      <img src="img/icons/noun-story-3266367.png" alt=""></span>
-                    <span class="cardV2RatingProgressBar"></span>
-                  </span>
-                  <span class="cardV2RatingTabBtn" id="openCardV2"><a class="salutbtn" href=""></a></span>
                 </span>
-                <span>
-                  <p>Test</p>
-                  <p>Test</p>
-                  <p>Test</p>
-                  <p>Test</p>
+                <span class="cardV2RatingSection">
+                  <span class="cardV2RatingIcon">
+                    <img src="img/icons/noun-wrench-1560053.png" alt=""></span>
+                  <span class="cardV2RatingProgressBar">
+                    <span class="cardV2RatingBar"></span>
+                  </span>
                 </span>
+                <span class="cardV2RatingSection">
+                  <span class="cardV2RatingIcon">
+                    <img src="img/icons/noun-story-3266367.png" alt=""></span>
+                  <span class="cardV2RatingProgressBar">
+                    <span class="cardV2RatingBar"></span>
+                  </span>
+                </span>
+                <span class="cardV2RatingTabBtn" id="openCardV2"><a class="salutbtn" href=""></a></span>
+              </span>
+              <span>
+                <p>Test</p>
+                <p>Test</p>
+                <p>Test</p>
+                <p>Test</p>
+              </span>
             </div>
             <div class="cardv2rank"></div>
           </div>
