Correction : Retrait de la feuille excel sur la page index. Ajout : Fonctionnalité de synchronissation de la barre de progression de la notation des jeux

--- a/index.html
+++ b/index.html
@@ -117,21 +117,36 @@
                     <img src="img/icons/noun-gamepad-1608468.png" alt="">
                   </span>
                   <span class="cardV2RatingProgressBar">
-                    <span class="cardV2RatingBar"></span>
+                    <span class="cardRatingIconBg"></span>
+                    <span class="cardRatingBarHolder">
+                      <span class="cardV2RatingBar">
+                        <p class="cardV2RatingPourcentage">55%</p>
+                      </span>
+                    </span>
                   </span>
                 </span>
                 <span class="cardV2RatingSection">
                   <span class="cardV2RatingIcon">
                     <img src="img/icons/noun-wrench-1560053.png" alt=""></span>
                   <span class="cardV2RatingProgressBar">
-                    <span class="cardV2RatingBar"></span>
+                    <span class="cardRatingIconBg"></span>
+                    <span class="cardRatingBarHolder">
+                      <span class="cardV2RatingBar">
+                        <p class="cardV2RatingPourcentage">70%</p>
+                      </span>
+                    </span>
                   </span>
                 </span>
                 <span class="cardV2RatingSection">
                   <span class="cardV2RatingIcon">
                     <img src="img/icons/noun-story-3266367.png" alt=""></span>
                   <span class="cardV2RatingProgressBar">
-                    <span class="cardV2RatingBar"></span>
+                    <span class="cardRatingIconBg"></span>
+                    <span class="cardRatingBarHolder">
+                      <span class="cardV2RatingBar">
+                        <p class="cardV2RatingPourcentage">10%</p>
+                      </span>
+                    </span>
                   </span>
                 </span>
                 <span class="cardV2RatingTabBtn" id="openCardV2"><a class="salutbtn" href=""></a></span>
@@ -215,6 +230,5 @@
 </body>
 
 <script src="js/script.js"></script>
-<script src="js/js-excel.js"></script>
 
 </html>
